# SOMA

./: .gitignore  README.md  package-lock.json  package.json  start.ps1
.github/workflows/: release.yml
docs/: architecture.md  setup.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clustering.rs  commands.rs  db.rs  embeddings.rs  insights.rs  lib.rs  main.rs  retrieval.rs  scheduler.rs  settings.rs
src-tauri/src/models/: chunk.rs  embedding.rs  insight.rs  message.rs  mod.rs  note.rs  session.rs
src-tauri/src/repository/: chunk_repo.rs  insight_repo.rs  mod.rs  note_repo.rs  session_repo.rs
src-tauri/src/services/: chat_service.rs  chunking_service.rs  embedding_service.rs  insight_service.rs  mod.rs  ollama_client.rs  prompt_builder.rs  retrieval_service.rs
src/components/: ChatPane.tsx  InsightsFeed.tsx  NoteInput.tsx
src/hooks/: useChat.ts  useInsights.ts  useNotes.ts  useSessions.ts
src/lib/: tauri.ts  types.ts
src/pages/: ChatPage.tsx  InsightsPage.tsx  NotesPage.tsx  SettingsPage.tsx  SetupPage.tsx  StatusPage.tsx
